--- a/DoIt/templates/DoIt/new_list.html
+++ b/DoIt/templates/DoIt/new_list.html
@@ -5,7 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>New list</title>
 </head>
 <body>
 
@@ -16,12 +17,6 @@
 
         {% if error_message %}
             <p><strong>{{ error_message }}</strong></p>
-        {% endif %}
-
-        {% if messages %}
-            {% for message in messages %}
-                <p><strong>{{ message }}</strong></p>
-            {% endfor %}
         {% endif %}
 
         Name:<input type="text" name="name">
