--- a/DoIt/templates/DoIt/new_task.html
+++ b/DoIt/templates/DoIt/new_task.html
@@ -5,30 +5,36 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>New task to {{ list_name }} list</title>
 </head>
 <body>
 
-<form method="post">
+<form method="post" class="border border-secondary rounded m-5">
+{% csrf_token %}
     <fieldset>
-        <h1>Adding a new task to the {{ list_name }} list</h1>
+        <h1 class="text-center my-4">Adding a new task to the {{ list_name }} list</h1>
 
         {% if error_message %}
-            <p><strong>{{ error_message }}</strong></p>
+            <p class="text-center"><strong>{{ error_message }}</strong></p>
         {% endif %}
 
-        {% if messages %}
-            {% for message in messages %}
-                <p><strong>{{ message }}</strong></p>
-            {% endfor %}
-        {% endif %}
+        <fieldset class="m-5 px-5">
+            Name: <input type="text" name="name" class="m-2"><br>
+            Description: <input type="text" name="description" class="m-2"><br>
+            Is done ?: <input type="checkbox" name="is_done" class="m-2"><br>
+            Date of start: <input type="date" name="start_date" value="{{ placement.date|date:'YYYY-MM-DD' }}" class="m-2"><br>
+            Date of ending: <input type="date" name="end_date" class="m-3"><br>
+            How much time it takes in minutes: <input type="number" name="time_it_takes" value="0" class="m-2"><br>
+            Is important ?: <input type="checkbox" name="is_important" class="m-2">
 
-        Name: <input type="text" name="name">
-        Description: <input type="text" name="description">
-        Is done ?: <input type="checkbox" name="is_done">
-        Date of start: <input type="date" name="start_date">
-        How much time it takes <input type="number" name="time_it_takes">
-        Is important ?: <input type="checkbox" name="is_important">
+        </fieldset>
+
+        <ul class="list-group mx-5 my-2 px-5">
+            <li class="list-group-item text-center">
+                <input type="submit" value="Add task" class="btn btn-secondary ">
+            </li>
+        </ul>
 
     </fieldset>
 </form>
