--- a/DoIt/templates/DoIt/index.html
+++ b/DoIt/templates/DoIt/index.html
@@ -6,25 +6,28 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Lists of Task</title>
+    <title>Lists</title>
 </head>
 <body>
-<fieldset class="border border-secondary rounded m-5">
-    <h1 class="text-center my-4">Lists of Task</h1>
+<div class="border border-secondary rounded m-5">
+    <h1 class="text-center my-4">Lists</h1>
     {% if list_of_lists %}
-
-        {% if messages %}
-            {% for message in messages %}
-                <p class="text-center"><strong>{{ message }}</strong></p>
-            {% endfor %}
-        {% endif %}
-
         <ul class="list-group mx-5 my-2 px-5">
             {% for list in list_of_lists %}
-                <li class="list-group-item text-center">
-                    <a href="{% url 'DoIt:tasks' list.id list.name%}" class="link-secondary" style="text-decoration:none">
-                        {{ list.name }}
+                <li class="list-group-item d-flex justify-content-evenly">
+                    <a href="{% url 'DoIt:tasks' list.id %}" class="link-secondary text-decoration-none">
+                    {{ list.name }}
                     </a>
+                    <div class=" d-flex justify-content-evenly">
+                        <form method="post" action="{% url 'DoIt:delete_list' list.id %}" class="mx-1">
+                            {% csrf_token %}
+                            <input type="submit" class="btn btn-danger" value="Delete">
+                        </form>
+                        <form method="post" action="{% url 'DoIt:edit_list' list.id %}" class="mx-1">
+                            {% csrf_token %}
+                            <input type="submit" class="btn btn-primary" value="Edit">
+                        </form>
+                    </div>
                 </li>
             {% endfor %}
 
@@ -34,12 +37,11 @@
     {% endif %}
     <ul class="list-group mx-5 my-2 px-5">
         <li class="list-group-item text-center">
-            <a href="{% url 'DoIt:new_list' %}" class="link-secondary" style="text-decoration:none">
+            <a href="{% url 'DoIt:new_list' %}" class="btn btn-secondary text-decoration-none" >
                 Add a new List
             </a>
         </li>
     </ul>
-
-</fieldset>
+</div>
 </body>
 </html>
