--- a/DoIt/templates/DoIt/list_form.html
+++ b/DoIt/templates/DoIt/list_form.html
@@ -6,24 +6,19 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>New list</title>
+    <title>Manage list</title>
 </head>
 <body>
+<div class="border border-secondary rounded m-5">
+    <div class="m-5 px-5">
+        <h1 class="text-center my-4">Manage list</h1>
+    </div>
 
-<form method="POST" >
-{% csrf_token %}
-    <fieldset>
-        <h1>New list</h1>
-
-        {% if error_message %}
-            <p><strong>{{ error_message }}</strong></p>
-        {% endif %}
-
-        Name:<input type="text" name="name">
-
-        <input type="submit" value="Add list">
-    </fieldset>
-</form>
-
+    <form method="POST" class="m-5 px-5" >
+    {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Save" class="btn btn-secondary text-decoration-none">
+    </form>
+</div>
 </body>
 </html>
