--- a/DoIt/templates/DoIt/list_tasks.html
+++ b/DoIt/templates/DoIt/list_tasks.html
@@ -6,45 +6,47 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Tasks of {{ view.kwargs.name }}</title>
+    <title>Tasks of {{ tasks_of_list.first.list.name }}</title>
 </head>
 <body>
-<fieldset class="border border-secondary rounded m-5">
-
-    <h1 class="text-center my-4">Tasks of {{ view.kwargs.name }}</h1>
+<div class="border border-secondary rounded m-5">
     {% if tasks_of_list %}
-        {% if messages %}
-            {% for message in messages %}
-                <p class="text-center"><strong>{{ message }}</strong></p>
-            {% endfor %}
-        {% endif %}
-
+     <h1 class="text-center my-4">Tasks of {{ tasks_of_list.first.list.name }}</h1>
         <ul class="list-group mx-5 my-2 px-5">
             {% for task in tasks_of_list %}
-                <li class="list-group-item text-center">
-                    <a href="{% url 'DoIt:details' task.id %}" class="link-secondary" style="text-decoration:none">
+                <li class="list-group-item d-flex justify-content-evenly">
+                    <a href="{% url 'DoIt:details' task.id %}" class="link-secondary text-decoration-none">
                         {{ task.name }}
                     </a>
+                    <div class=" d-flex justify-content-evenly">
+                        <form method="post" action="{% url 'DoIt:delete_task' task.id %}">
+                            {% csrf_token %}
+                            <input type="submit" class="btn btn-danger mx-2" value="Delete">
+                        </form>
+                        <form method="post" action="{% url 'DoIt:edit_task' task.id %}" class="mx-1">
+                            {% csrf_token %}
+                            <input type="submit" class="btn btn-primary" value="Edit">
+                        </form>
+                    </div>
                 </li>
             {% endfor %}
         </ul>
     {% else %}
-        <p class="text-center mt-4">No Tasks for this list</p>
+        <h1 class="text-center my-4 ">No Tasks for this list</h1>
     {% endif %}
 
     <ul class="list-group mx-5 my-2 px-5">
         <li class="list-group-item text-center">
-            <a href="{% url 'DoIt:new_task' view.kwargs.pk %}" class="link-secondary" style="text-decoration:none">
+            <a href="{% url 'DoIt:new_task' %}" class="link-secondary text-decoration-none">
                 Add a new Task
             </a>
         </li>
         <li class="list-group-item text-center">
-            <a href="{% url 'DoIt:index' %}" class="link-secondary" style="text-decoration:none">
+            <a href="{% url 'DoIt:index' %}" class="link-secondary text-decoration-none" >
                 Go back to index
             </a>
         </li>
     </ul>
-
-</fieldset>
+</div>
 </body>
 </html>
