--- a/DoIt/templates/DoIt/index.html
+++ b/DoIt/templates/DoIt/index.html
@@ -1,45 +1,23 @@
 <!doctype html>
-<html lang="en" xmlns:style="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Lists of Task</title>
+    <title>Document</title>
 </head>
 <body>
-<fieldset class="border border-secondary rounded m-5">
-    <h1 class="text-center my-4">Lists of Task</h1>
-    {% if list_of_lists %}
-
-        {% if messages %}
-            {% for message in messages %}
-                <p class="text-center"><strong>{{ message }}</strong></p>
-            {% endfor %}
+{% if list_of_lists %}
+    <fieldset>
+        <h1>Lists of Task</h1>
+        {% for list in list_of_lists %}
+        <li><a href="{% url 'DoIt:tasks' list.id list.name%}">{{ list.name }}</a></li>
+        {% endfor %}
+        {% else %}
+        <h1>No lists available</h1>
         {% endif %}
-
-        <ul class="list-group mx-5 my-2 px-5">
-            {% for list in list_of_lists %}
-                <li class="list-group-item text-center">
-                    <a href="{% url 'DoIt:tasks' list.id list.name%}" class="link-secondary" style="text-decoration:none">
-                        {{ list.name }}
-                    </a>
-                </li>
-            {% endfor %}
-
-        </ul>
-    {% else %}
-        <p class="text-center mt-4">No lists available</p>
-    {% endif %}
-    <ul class="list-group mx-5 my-2 px-5">
-        <li class="list-group-item text-center">
-            <a href="{% url 'DoIt:new_list' %}" class="link-secondary" style="text-decoration:none">
-                Add a new List
-            </a>
-        </li>
-    </ul>
-
-</fieldset>
+        <br><a href="{% url 'DoIt:new_list' %}">Add a new List</a>
+    </fieldset>
 </body>
 </html>
