--- a/DoIt/templates/DoIt/list_tasks.html
+++ b/DoIt/templates/DoIt/list_tasks.html
@@ -5,46 +5,16 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Tasks of {{ view.kwargs.name }}</title>
+    <title>Document</title>
 </head>
 <body>
-<fieldset class="border border-secondary rounded m-5">
+<fieldset>
+    <h1>Tasks of {{ view.kwargs.name }}</h1>
+    {% for task in task_of_list %}
+    <li><a href="{% url 'DoIt:details' task.id %}" >{{ task.name }}</a></li>
+    {% endfor %}
 
-    <h1 class="text-center my-4">Tasks of {{ view.kwargs.name }}</h1>
-    {% if tasks_of_list %}
-        {% if messages %}
-            {% for message in messages %}
-                <p class="text-center"><strong>{{ message }}</strong></p>
-            {% endfor %}
-        {% endif %}
-
-        <ul class="list-group mx-5 my-2 px-5">
-            {% for task in tasks_of_list %}
-                <li class="list-group-item text-center">
-                    <a href="{% url 'DoIt:details' task.id %}" class="link-secondary" style="text-decoration:none">
-                        {{ task.name }}
-                    </a>
-                </li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        <p class="text-center mt-4">No Tasks for this list</p>
-    {% endif %}
-
-    <ul class="list-group mx-5 my-2 px-5">
-        <li class="list-group-item text-center">
-            <a href="{% url 'DoIt:new_task' view.kwargs.pk %}" class="link-secondary" style="text-decoration:none">
-                Add a new Task
-            </a>
-        </li>
-        <li class="list-group-item text-center">
-            <a href="{% url 'DoIt:index' %}" class="link-secondary" style="text-decoration:none">
-                Go back to index
-            </a>
-        </li>
-    </ul>
-
+    <a href="{% url 'DoIt:new_task' view.kwargs.pk %}">Add a new Task</a>
 </fieldset>
 </body>
 </html>
