--- a/DoIt/templates/DoIt/new_list.html
+++ b/DoIt/templates/DoIt/new_list.html
@@ -5,13 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>DoIt</title>
 </head>
 <body>
-
-<form method="POST" >
-{% csrf_token %}
-    <fieldset>
+    <div>
         <h1>New list</h1>
 
         {% if error_message %}
@@ -24,11 +21,17 @@
             {% endfor %}
         {% endif %}
 
-        Name:<input type="text" name="name">
+        <form method="post">
+            {% csrf_token %}
 
-        <input type="submit" value="Add list">
-    </fieldset>
-</form>
+            Name:<input type="text" name="name">
 
+            <input type="submit" value="Add list">
+
+        </form>
+    </div>
+    <footer>
+        <button type="submit" onclick="location.href ='{% url 'DoIt:index' %}'">Go back to index</button>
+    </footer>
 </body>
 </html>
