--- a/DoIt/templates/DoIt/new_task.html
+++ b/DoIt/templates/DoIt/new_task.html
@@ -5,13 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>DoIt</title>
 </head>
 <body>
-
-<form method="post">
-    <fieldset>
-        <h1>Adding a new task to the {{ list_name }} list</h1>
+    <div>
+        <h1>Adding a new task to the {{ list.name }} list</h1>
 
         {% if error_message %}
             <p><strong>{{ error_message }}</strong></p>
@@ -23,15 +21,21 @@
             {% endfor %}
         {% endif %}
 
-        Name: <input type="text" name="name">
-        Description: <input type="text" name="description">
-        Is done ?: <input type="checkbox" name="is_done">
-        Date of start: <input type="date" name="start_date">
-        How much time it takes <input type="number" name="time_it_takes">
-        Is important ?: <input type="checkbox" name="is_important">
+        <form method="post">
+            {% csrf_token %}
 
-    </fieldset>
-</form>
+            Name: <input type="text" name="name">
+            Description: <input type="text" name="description">
+            Is done ?: <input type="checkbox" name="is_done">
+            Date of start: <input type="date" name="start_date">
+            How much time it takes <input type="number" name="time_it_takes">
+            Is important ?: <input type="checkbox" name="is_important">
 
+            <button type="submit" onclick="">Save</button>
+        </form>
+    </div>
+    <footer>
+        <button onclick="location.href= '{% url 'DoIt:tasks' list.id %}'" >Go back to the list</button>
+    </footer>
 </body>
 </html>
