--- a/DoIt/templates/DoIt/list_tasks.html
+++ b/DoIt/templates/DoIt/list_tasks.html
@@ -5,16 +5,39 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>DoIt</title>
 </head>
 <body>
-<fieldset>
-    <h1>Tasks of {{ view.kwargs.name }}</h1>
-    {% for task in task_of_list %}
-    <li><a href="{% url 'DoIt:details' task.id %}" >{{ task.name }}</a></li>
-    {% endfor %}
+    <div>
+        <h1>Tasks of {{ task_of_list.first.list.name }}</h1>
 
-    <a href="{% url 'DoIt:new_task' view.kwargs.pk %}">Add a new Task</a>
-</fieldset>
+        {% if messages %}
+            {% for message in messages %}
+                <p><strong>{{ message }}</strong></p>
+            {% endfor %}
+        {% endif %}
+
+        <ul>
+            {% for task in task_of_list %}
+                <li>
+                    <a href="{% url 'DoIt:details' task.id %}" >{{ task.name }}</a>
+                    <div>
+                            <form method="post">
+                                {% csrf_token %}
+                                <button type="submit" onclick="">Edit</button>
+                            </form>
+                            <form method="post">
+                                {% csrf_token %}
+                                <button type="submit" onclick="">Delete</button>
+                            </form>
+                        </div>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+    <footer>
+        <button onclick="location.href= '{% url 'DoIt:new_task' view.kwargs.pk %}'">Add a new Task</button>
+        <button type="submit" onclick="location.href ='{% url 'DoIt:index' %}'">Go back to index</button>
+    </footer>
 </body>
 </html>
