--- a/DoIt/templates/DoIt/task_form.html
+++ b/DoIt/templates/DoIt/task_form.html
@@ -5,18 +5,20 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Managing task </title>
+    <title>DoIt</title>
 </head>
 <body>
-    <div  class="border border-secondary rounded m-5" >
-        <h1 class="text-center my-4">Managing a task </h1>
+    <div>
+        <h1>{{ page_title }} {{ list.name }}</h1>
 
-        <form method="post" class="m-5" name="new_task">
+        <form method="post" >
             {% csrf_token %}
             {{ form.as_p }}
-            <input type="submit" value="Save" class="btn btn-secondary text-decoration-none" >
+            <button type="submit" >Save</button>
         </form>
     </div>
+    <footer>
+        <button onclick="location.href= '{% url 'DoIt:tasks' list.id %}'" >Go back to the list</button>
+    </footer>
 </body>
 </html>
