--- a/DoIt/templates/DoIt/list_confirm_delete.html
+++ b/DoIt/templates/DoIt/list_confirm_delete.html
@@ -5,15 +5,18 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>DoIt</title>
 </head>
-<body>
-    <form method="post">
+<body class="border border-secondary rounded m-5 px-5 ">
+    <form method="post" class="text-center m-5">
         {% csrf_token %}
-        <p>Are you sure you want to delete the list "{{ list.name }}"?</p>
+        <h3 class="mb-5">Are you sure you want to delete the list "{{ list.name }}"?</h3>
 
-        <button type="submit" >Confirm</button>
-        <a href="{% url 'DoIt:index' %}" >Cancel</a>
+        <button type="submit" class="btn btn-danger m-1">Confirm</button>
+        <a href="{% url 'DoIt:index' %}"  class="btn btn-secondary text-decoration-none m-1">Cancel</a>
+
     </form>
 </body>
 </html>
