--- a/DoIt/templates/DoIt/list_form.html
+++ b/DoIt/templates/DoIt/list_form.html
@@ -5,23 +5,27 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>DoIt</title>
 </head>
-<body>
+<body class="border border-secondary rounded m-5 px-5 ">
     <div>
-        <h1>{{ page_title }}</h1>
+        <h1 class="text-center my-4">{{ page_title }}</h1>
 
-        <form method="post">
+        <form method="post" class="mb-3 mx-5 px-5">
             {% csrf_token %}
 
             {{ form.as_p }}
 
-            <input type="submit" value="Save">
+            <div class="text-center">
+                <input type="submit" value="Save" class="btn btn-secondary m-1">
 
+                <a href ="{% url 'DoIt:index' %}" class="btn btn-secondary text-decoration-none m-1">
+                    Go back to index
+                </a>
+            </div>
         </form>
     </div>
-    <footer>
-        <button type="submit" onclick="location.href ='{% url 'DoIt:index' %}'">Go back to index</button>
-    </footer>
 </body>
 </html>
