--- a/DoIt/templates/DoIt/index.html
+++ b/DoIt/templates/DoIt/index.html
@@ -1,54 +1,48 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>DoIt</title>
-</head>
-<body class="border border-secondary rounded  m-5">
-    <div>
-        <h1 class="text-center my-4">Lists</h1>
-        {% if list_of_lists %}
+{% extends 'base_app.html' %}
 
-            {% if messages %}
-                {% for message in messages %}
-                    <p class="text-center mb-4"><strong>{{ message }}</strong></p>
-                {% endfor %}
-            {% endif %}
+{% block content %}
+<div>
+    <h1 class="text-center my-4">Lists of user {{ user }} </h1>
+    {% if list_of_lists %}
 
-            <ul class="list-group mx-5 my-2 px-5">
-                {% for list in list_of_lists %}
-                    <li class="list-group-item d-flex justify-content-evenly">
-                        <a href="{% url 'DoIt:tasks' list.id %}" class="link-secondary text-decoration-none">
-                            {{ list.name }}
-                        </a>
-                        <div class=" d-flex justify-content-evenly">
-                            <button onclick="location.href= '{% url 'DoIt:list_edit' list.id %}'"
-                                    class="btn btn-primary m-1">
-                                Edit
-                            </button>
-
-                            <button onclick="location.href= '{% url 'DoIt:list_delete' list.id %}'"
-                                    class="btn btn-danger m-1">
-                                Delete
-                            </button>
-                        </div>
-                    </li>
-                {% endfor %}
-            </ul>
-        {% else %}
-            <h1 class="text-center mt-4">No lists available</h1>
+        {% if messages %}
+            {% for message in messages %}
+                <p class="text-center mb-4"><strong>{{ message }}</strong></p>
+            {% endfor %}
         {% endif %}
-    </div>
-    <footer class="text-center m-4">
-        <button onclick="location.href= '{% url 'DoIt:new_list' %}'"
-                class="btn btn-secondary text-decoration-none">
-            Add a new List
-        </button>
-    </footer>
-</body>
-</html>
+
+        <ul class="list-group mx-5 my-2 px-5">
+            {% for list in list_of_lists %}
+            <li class="list-group-item d-flex justify-content-evenly">
+                <a href="{% url 'DoIt:tasks' list.id %}" class="link-secondary text-decoration-none">
+                    {{ list.name }}
+                </a>
+                <div class=" d-flex justify-content-evenly">
+                    <button onclick="location.href= '{% url 'DoIt:list_edit' list.id %}'"
+                            class="btn btn-primary m-1">
+                        Edit
+                    </button>
+
+                    <button onclick="location.href= '{% url 'DoIt:list_delete' list.id %}'"
+                            class="btn btn-danger m-1">
+                        Delete
+                    </button>
+                </div>
+            </li>
+            {% endfor %}
+        </ul>
+    {% else %}
+    <h1 class="text-center mt-4">No lists available</h1>
+    {% endif %}
+</div>
+<footer class="text-center m-4">
+    <button onclick="location.href= '{% url 'DoIt:new_list' %}'"
+            class="btn btn-secondary text-decoration-none">
+        Add a new List
+    </button>
+    <button onclick="location.href= '{% url 'logout' %}'"
+            class="btn btn-secondary text-decoration-none">
+        Log out
+    </button>
+</footer>
+{% endblock %}
