--- a/DoIt/templates/DoIt/list_form.html
+++ b/DoIt/templates/DoIt/list_form.html
@@ -1,31 +1,21 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>DoIt</title>
-</head>
-<body class="border border-secondary rounded m-5 px-5 ">
-    <div>
-        <h1 class="text-center my-4">{{ page_title }}</h1>
+{% extends 'base_app.html' %}
 
-        <form method="post" class="mb-3 mx-5 px-5">
-            {% csrf_token %}
+{% block content %}
+<div>
+    <h1 class="text-center my-4">{{ page_title }}</h1>
 
-            {{ form.as_p }}
+    <form method="post" class="mb-3 mx-5 px-5">
+        {% csrf_token %}
 
-            <div class="text-center">
-                <input type="submit" value="Save" class="btn btn-secondary m-1">
+        {{ form.as_p }}
 
-                <a href ="{% url 'DoIt:index' %}" class="btn btn-secondary text-decoration-none m-1">
-                    Go back to index
-                </a>
-            </div>
-        </form>
-    </div>
-</body>
-</html>
+        <div class="text-center">
+            <input type="submit" value="Save" class="btn btn-secondary m-1">
+
+            <a href ="{% url 'DoIt:index' %}" class="btn btn-secondary text-decoration-none m-1">
+                Go back to index
+            </a>
+        </div>
+    </form>
+</div>
+{% endblock %}
