--- a/DoIt/templates/DoIt/task_form.html
+++ b/DoIt/templates/DoIt/task_form.html
@@ -1,33 +1,23 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>DoIt</title>
-</head>
-<body class="border border-secondary rounded m-5 px-5 ">
-    <div>
-        <h1 class="text-center my-4">{{ page_title }} {{ list.name }}</h1>
+{% extends 'base_app.html' %}
 
-        <form method="post" class="mb-3 mx-5 px-5">
-            {% csrf_token %}
+{% block content %}
+<div>
+    <h1 class="text-center my-4">{{ page_title }} {{ list.name }}</h1>
 
-            {{ form.as_p }}
+    <form method="post" class="mb-3 mx-5 px-5">
+        {% csrf_token %}
 
-            <div class="text-center">
-                <button type="submit" class="btn btn-secondary m-1">Save</button>
+        {{ form.as_p }}
 
-                <a href= "{% url 'DoIt:tasks' list.id %}"
-                   class="btn btn-secondary text-decoration-none m-1" >
-                    Go back to the list
-                </a>
-            </div>
+        <div class="text-center">
+            <button type="submit" class="btn btn-secondary m-1">Save</button>
 
-        </form>
-    </div>
-</body>
-</html>
+            <a href= "{% url 'DoIt:tasks' list.id %}"
+               class="btn btn-secondary text-decoration-none m-1" >
+                Go back to the list
+            </a>
+        </div>
+
+    </form>
+</div>
+{% endblock %}
